ocp/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-ocp-tools-postgresql
  namespace: testing-pmx3
  labels:
    app.kubernetes.io/name: ms-ocp-tools-postgresql
    app.kubernetes.io/part-of: ocp-tools
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: ms-ocp-tools-postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
