ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ms-ocp-tools
  namespace: testing-pmx3
  labels:
    app.kubernetes.io/name: ms-ocp-tools
spec:
  to:
    kind: Service
    name: ms-ocp-tools
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
